<resources>
    <string name="app_name">Ark Web Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_ping_offline">Sorry, that server is offline. Ask the server owner to start it, or try again later.</string>
    <string name="error_resume_ping_offline">Sorry, the last server you were using is currently offline. You will need to choose a different server.</string>

    <string name="login_welcome">Welcome!</string>
    <string name="login_description">To get started with ArkWebMap, you\'ll need to sign in with Steam to access your Ark servers and tribes.</string>

    <string name="error_net_btn">Ok</string>
    <string name="error_net_connect_title">Offline</string>
    <string name="error_net_connect_sub">You are offline. Try again later.</string>
    <string name="error_net_521_title">Server Offline</string>
    <string name="error_net_521_sub">Sorry, the server you were using went offline. Try again later, or pick a different server.</string>
    <string name="error_net_503_title">Service Unavailable</string>
    <string name="error_net_503_sub">Sorry, system is currently down for maintenance. Try again later.</string>
    <string name="error_net_status_title">Unexpected Network Error</string>
    <string name="error_net_status_sub">An unexpected network error occurred. Try again later.</string>
    <string name="error_net_unexpected_title">Unexpected Server Error</string>
    <string name="error_net_unexpected_sub">The server returned an unexpected response that could not be read. Try again later.</string>
    <string name="error_net_server_error_title">Server Error</string>

    <string name="mainmenu_tribe">Tribe</string>
    <string name="mainmenu_tribe_map">Map</string>
    <string name="mainmenu_tribe_babydinos">Baby Dinos</string>
    <string name="mainmenu_tribe_locatedinos">Locate Dinos</string>
    <string name="mainmenu_tribe_searchinventories">Search Items</string>
    <string name="mainmenu_server">Server</string>
    <string name="mainmenu_server_notifications">Notifications</string>
    <string name="mainmenu_server_hide">Hide Server</string>
    <string name="mainmenu_server_delete">Delete Server</string>
    <string name="title_activity_server_notification_settings_page">Notification Settings</string>
    <string name="title_activity_ark_server_notifications_menu">Edit Notifications</string>

    <!-- Notifications screen -->
    <string name="notification_settings_category_babydinos">Baby Dinos</string>
    <string name="notification_settings_category_babydinos_low">Baby Dino Food Low (&lt; 30 minutes of food)</string>
    <string name="notification_settings_category_babydinos_critical">Baby Dino Critical (&lt; 8 minutes of food)</string>
    <string name="notification_settings_category_babydinos_starving">Baby Dino Starving (&lt; 1 minute of food)</string>

    <!-- Item search fragment -->
    <string name="item_search_fragment_hint">Item Type</string>

    <!-- Welcome (no servers) screen -->
    <string name="title_activity_no_servers">Welcome</string>
    <string name="welcome_no_servers_title">Welcome to ArkWebMap!</string>
    <string name="welcome_no_servers_text">ArkWebMap is an app for viewing your Ark: Survival Evolved tribe, dinos, and items. Get started by joining an Ark: Survival Evolved server with ArkWebMap, or adding it to your own server.</string>
    <string name="welcome_no_servers_demo_btn">View Demo Server</string>
    <string name="welcome_no_servers_add_btn">Add your Own Server</string>
    <string name="welcome_no_servers_add_btn_dialog_title">Create Server</string>
    <string name="welcome_no_servers_add_btn_dialog_sub">To create a server, visit https://ark.romanport.com/ in a web browser, then click the plus button in the bottom left.</string>
    <string name="welcome_no_servers_add_btn_dialog_ok">Ok</string>

    <!-- Hub -->
    <string name="title_activity_hub">Hub</string>

    <!-- Baby dino manager -->
    <string name="baby_dino_m_timetilfoodgone">Time Until Food Depleted</string>
    <string name="baby_dino_m_foodremaining">Food Remaining</string>
    <string name="baby_dino_m_imprinting">Imprinting</string>
    <string name="baby_dino_m_maturing">Maturing</string>

</resources>
